packages/win32/src/kernel32.g.h

MYLIB_EXPORT Win32Result ActivateActCtx_Wrapper(HANDLE hActCtx, unsigned long long* lpCookie);
MYLIB_EXPORT Win32Result AddDllDirectory_Wrapper(PCWSTR newDirectory);
MYLIB_EXPORT Win32Result AllocConsole_Wrapper();
MYLIB_EXPORT Win32Result AssignProcessToJobObject_Wrapper(HANDLE hJob, HANDLE hProcess);
MYLIB_EXPORT Win32Result AttachConsole_Wrapper(unsigned long dwProcessId);
MYLIB_EXPORT Win32Result Beep_Wrapper(unsigned long dwFreq, unsigned long dwDuration);
MYLIB_EXPORT Win32Result BeginUpdateResourceW_Wrapper(PCWSTR pFileName, BOOL bDeleteExistingResources);
MYLIB_EXPORT Win32Result BuildCommDCBW_Wrapper(PCWSTR lpDef, DCB* lpDCB);
MYLIB_EXPORT Win32Result BuildCommDCBAndTimeoutsW_Wrapper(PCWSTR lpDef, DCB* lpDCB, COMMTIMEOUTS* lpCommTimeouts);
MYLIB_EXPORT Win32Result CancelIo_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result CancelIoEx_Wrapper(HANDLE hFile, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result CancelSynchronousIo_Wrapper(HANDLE hThread);
MYLIB_EXPORT Win32Result CheckRemoteDebuggerPresent_Wrapper(HANDLE hProcess, BOOL* pbDebuggerPresent);
MYLIB_EXPORT Win32Result ClearCommBreak_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result ClearCommError_Wrapper(HANDLE hFile, DWORD* lpErrors, COMSTAT* lpStat);
MYLIB_EXPORT Win32Result CloseHandle_Wrapper(HANDLE hObject);
MYLIB_EXPORT Win32Result CommConfigDialogW_Wrapper(PCWSTR lpszName, HWND hWnd, COMMCONFIG* lpCC);
MYLIB_EXPORT Win32Result ConnectNamedPipe_Wrapper(HANDLE hNamedPipe, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result ContinueDebugEvent_Wrapper(unsigned long dwProcessId, unsigned long dwThreadId, NTSTATUS dwContinueStatus);
MYLIB_EXPORT Win32Result CopyFileW_Wrapper(PCWSTR lpExistingFileName, PCWSTR lpNewFileName, BOOL bFailIfExists);
MYLIB_EXPORT Win32Result CopyFileExW_Wrapper(PCWSTR lpExistingFileName, PCWSTR lpNewFileName, LPPROGRESS_ROUTINE lpProgressRoutine, void* lpData, BOOL* pbCancel, DWORD dwCopyFlags);
MYLIB_EXPORT Win32Result CreateActCtxW_Wrapper(ACTCTXW* pActCtx);
MYLIB_EXPORT Win32Result CreateConsoleScreenBuffer_Wrapper(unsigned long dwDesiredAccess, unsigned long dwShareMode, SECURITY_ATTRIBUTES* lpSecurityAttributes, unsigned long dwFlags, void* lpScreenBufferData);
MYLIB_EXPORT Win32Result CreateDirectoryW_Wrapper(PCWSTR lpPathName, SECURITY_ATTRIBUTES* lpSecurityAttributes);
MYLIB_EXPORT Win32Result CreateEventW_Wrapper(SECURITY_ATTRIBUTES* lpEventAttributes, BOOL bManualReset, BOOL bInitialState, PCWSTR lpName);
MYLIB_EXPORT Win32Result CreateEventExW_Wrapper(SECURITY_ATTRIBUTES* lpEventAttributes, PCWSTR lpName, DWORD dwFlags, unsigned long dwDesiredAccess);
MYLIB_EXPORT Win32Result CreateFileW_Wrapper(PCWSTR lpFileName, unsigned long dwDesiredAccess, DWORD dwShareMode, SECURITY_ATTRIBUTES* lpSecurityAttributes, DWORD dwCreationDisposition, DWORD dwFlagsAndAttributes, HANDLE hTemplateFile);
MYLIB_EXPORT Win32Result CreateFile2_Wrapper(PCWSTR lpFileName, unsigned long dwDesiredAccess, DWORD dwShareMode, DWORD dwCreationDisposition, CREATEFILE2_EXTENDED_PARAMETERS* pCreateExParams);
MYLIB_EXPORT Win32Result CreateIoCompletionPort_Wrapper(HANDLE fileHandle, HANDLE existingCompletionPort, unsigned long long completionKey, unsigned long numberOfConcurrentThreads);
MYLIB_EXPORT Win32Result CreateJobObjectW_Wrapper(SECURITY_ATTRIBUTES* lpJobAttributes, PCWSTR lpName);
MYLIB_EXPORT Win32Result CreatePipe_Wrapper(HANDLE* hReadPipe, HANDLE* hWritePipe, SECURITY_ATTRIBUTES* lpPipeAttributes, unsigned long nSize);
MYLIB_EXPORT Win32Result CreateProcessW_Wrapper(PCWSTR lpApplicationName, PWSTR lpCommandLine, SECURITY_ATTRIBUTES* lpProcessAttributes, SECURITY_ATTRIBUTES* lpThreadAttributes, BOOL bInheritHandles, DWORD dwCreationFlags, void* lpEnvironment, PCWSTR lpCurrentDirectory, STARTUPINFOW* lpStartupInfo, PROCESS_INFORMATION* lpProcessInformation);
MYLIB_EXPORT Win32Result CreateRemoteThread_Wrapper(HANDLE hProcess, SECURITY_ATTRIBUTES* lpThreadAttributes, unsigned long long dwStackSize, LPTHREAD_START_ROUTINE lpStartAddress, void* lpParameter, unsigned long dwCreationFlags, unsigned long* lpThreadId);
MYLIB_EXPORT Win32Result CreateRemoteThreadEx_Wrapper(HANDLE hProcess, SECURITY_ATTRIBUTES* lpThreadAttributes, unsigned long long dwStackSize, LPTHREAD_START_ROUTINE lpStartAddress, void* lpParameter, unsigned long dwCreationFlags, LPPROC_THREAD_ATTRIBUTE_LIST lpAttributeList, unsigned long* lpThreadId);
MYLIB_EXPORT Win32Result CreateSymbolicLinkW_Wrapper(PCWSTR lpSymlinkFileName, PCWSTR lpTargetFileName, DWORD dwFlags);
MYLIB_EXPORT Win32Result CreateThread_Wrapper(SECURITY_ATTRIBUTES* lpThreadAttributes, unsigned long long dwStackSize, LPTHREAD_START_ROUTINE lpStartAddress, void* lpParameter, DWORD dwCreationFlags, unsigned long* lpThreadId);
MYLIB_EXPORT Win32Result DeactivateActCtx_Wrapper(unsigned long dwFlags, unsigned long long ulCookie);
MYLIB_EXPORT Win32Result DebugBreakProcess_Wrapper(HANDLE process);
MYLIB_EXPORT Win32Result DebugSetProcessKillOnExit_Wrapper(BOOL killOnExit);
MYLIB_EXPORT Win32Result DefineDosDeviceW_Wrapper(DWORD dwFlags, PCWSTR lpDeviceName, PCWSTR lpTargetPath);
MYLIB_EXPORT Win32Result DeleteFileW_Wrapper(PCWSTR lpFileName);
MYLIB_EXPORT Win32Result DeleteVolumeMountPointW_Wrapper(PCWSTR lpszVolumeMountPoint);
MYLIB_EXPORT Win32Result DeviceIoControl_Wrapper(HANDLE hDevice, unsigned long dwIoControlCode, void* lpInBuffer, unsigned long nInBufferSize, void* lpOutBuffer, unsigned long nOutBufferSize, unsigned long* lpBytesReturned, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result DisableThreadLibraryCalls_Wrapper(HMODULE hLibModule);
MYLIB_EXPORT Win32Result DisconnectNamedPipe_Wrapper(HANDLE hNamedPipe);
MYLIB_EXPORT Win32Result DnsHostnameToComputerNameW_Wrapper(PCWSTR hostname, PWSTR computerName, unsigned long* nSize);
MYLIB_EXPORT Win32Result DosDateTimeToFileTime_Wrapper(unsigned short wFatDate, unsigned short wFatTime, FILETIME* lpFileTime);
MYLIB_EXPORT Win32Result DuplicateHandle_Wrapper(HANDLE hSourceProcessHandle, HANDLE hSourceHandle, HANDLE hTargetProcessHandle, HANDLE* lpTargetHandle, unsigned long dwDesiredAccess, BOOL bInheritHandle, DWORD dwOptions);
MYLIB_EXPORT Win32Result EndUpdateResourceW_Wrapper(HANDLE hUpdate, BOOL fDiscard);