packages/win32/lib/src/_internal/kernel32.g.dart

// THIS FILE IS GENERATED AUTOMATICALLY AND SHOULD NOT BE EDITED DIRECTLY.
//
// Wrappers for Win32 API functions that wrap the native APIs and preserve the
// result of GetLastError(), making it easier to debug issues and handle errors
// reliably.
//
// ignore_for_file: non_constant_identifier_names, unused_import

@DefaultAsset('package:win32/win32.dart')
library;

import 'dart:ffi';

import 'package:meta/meta.dart';

import '../callbacks.g.dart';
import '../functions.dart';
import '../guid.dart';
import '../pcstr.dart';
import '../pcwstr.dart';
import '../structs.g.dart';
import '../types.dart';
import 'win32.dart' show NativeWin32Result;

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<IntPtr>)>()
external NativeWin32Result ActivateActCtx_Wrapper(
  int hActCtx,
  Pointer<IntPtr> lpCookie,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result AddDllDirectory_Wrapper(PCWSTR newDirectory);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result AllocConsole_Wrapper();

@internal
@Native<NativeWin32Result Function(HANDLE, HANDLE)>()
external NativeWin32Result AssignProcessToJobObject_Wrapper(
  int hJob,
  int hProcess,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result AttachConsole_Wrapper(int dwProcessId);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32)>()
external NativeWin32Result Beep_Wrapper(int dwFreq, int dwDuration);

@internal
@Native<NativeWin32Result Function(PCWSTR, BOOL)>()
external NativeWin32Result BeginUpdateResourceW_Wrapper(
  PCWSTR pFileName,
  int bDeleteExistingResources,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<DCB>)>()
external NativeWin32Result BuildCommDCBW_Wrapper(
  PCWSTR lpDef,
  Pointer<DCB> lpDCB,
);

@internal
@Native<
  NativeWin32Result Function(PCWSTR, Pointer<DCB>, Pointer<COMMTIMEOUTS>)
>()
external NativeWin32Result BuildCommDCBAndTimeoutsW_Wrapper(
  PCWSTR lpDef,
  Pointer<DCB> lpDCB,
  Pointer<COMMTIMEOUTS> lpCommTimeouts,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result CancelIo_Wrapper(int hFile);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<OVERLAPPED>)>()
external NativeWin32Result CancelIoEx_Wrapper(
  int hFile,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result CancelSynchronousIo_Wrapper(int hThread);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<BOOL>)>()
external NativeWin32Result CheckRemoteDebuggerPresent_Wrapper(
  int hProcess,
  Pointer<BOOL> pbDebuggerPresent,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result ClearCommBreak_Wrapper(int hFile);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>, Pointer<COMSTAT>)>()
external NativeWin32Result ClearCommError_Wrapper(
  int hFile,
  Pointer<Uint32> lpErrors,
  Pointer<COMSTAT> lpStat,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result CloseHandle_Wrapper(int hObject);

@internal
@Native<NativeWin32Result Function(PCWSTR, HWND, Pointer<COMMCONFIG>)>()
external NativeWin32Result CommConfigDialogW_Wrapper(
  PCWSTR lpszName,
  int hWnd,
  Pointer<COMMCONFIG> lpCC,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<OVERLAPPED>)>()
external NativeWin32Result ConnectNamedPipe_Wrapper(
  int hNamedPipe,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32, Int32)>()
external NativeWin32Result ContinueDebugEvent_Wrapper(
  int dwProcessId,
  int dwThreadId,
  int dwContinueStatus,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, BOOL)>()
external NativeWin32Result CopyFileW_Wrapper(
  PCWSTR lpExistingFileName,
  PCWSTR lpNewFileName,
  int bFailIfExists,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PCWSTR,
    Pointer<NativeFunction<LPPROGRESS_ROUTINE>>,
    Pointer,
    Pointer<BOOL>,
    Uint32,
  )
>()
external NativeWin32Result CopyFileExW_Wrapper(
  PCWSTR lpExistingFileName,
  PCWSTR lpNewFileName,
  Pointer<NativeFunction<LPPROGRESS_ROUTINE>> lpProgressRoutine,
  Pointer lpData,
  Pointer<BOOL> pbCancel,
  int dwCopyFlags,
);

@internal
@Native<NativeWin32Result Function(Pointer<ACTCTX>)>()
external NativeWin32Result CreateActCtxW_Wrapper(Pointer<ACTCTX> pActCtx);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Uint32,
    Pointer<SECURITY_ATTRIBUTES>,
    Uint32,
    Pointer,
  )
>()
external NativeWin32Result CreateConsoleScreenBuffer_Wrapper(
  int dwDesiredAccess,
  int dwShareMode,
  Pointer<SECURITY_ATTRIBUTES> lpSecurityAttributes,
  int dwFlags,
  Pointer lpScreenBufferData,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<SECURITY_ATTRIBUTES>)>()
external NativeWin32Result CreateDirectoryW_Wrapper(
  PCWSTR lpPathName,
  Pointer<SECURITY_ATTRIBUTES> lpSecurityAttributes,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<SECURITY_ATTRIBUTES>, BOOL, BOOL, PCWSTR)
>()
external NativeWin32Result CreateEventW_Wrapper(
  Pointer<SECURITY_ATTRIBUTES> lpEventAttributes,
  int bManualReset,
  int bInitialState,
  PCWSTR lpName,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<SECURITY_ATTRIBUTES>,
    PCWSTR,
    Uint32,
    Uint32,
  )
>()
external NativeWin32Result CreateEventExW_Wrapper(
  Pointer<SECURITY_ATTRIBUTES> lpEventAttributes,
  PCWSTR lpName,
  int dwFlags,
  int dwDesiredAccess,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    Uint32,
    Uint32,
    Pointer<SECURITY_ATTRIBUTES>,
    Uint32,
    Uint32,
    HANDLE,
  )
>()
external NativeWin32Result CreateFileW_Wrapper(
  PCWSTR lpFileName,
  int dwDesiredAccess,
  int dwShareMode,
  Pointer<SECURITY_ATTRIBUTES> lpSecurityAttributes,
  int dwCreationDisposition,
  int dwFlagsAndAttributes,
  int hTemplateFile,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    Uint32,
    Uint32,
    Uint32,
    Pointer<CREATEFILE2_EXTENDED_PARAMETERS>,
  )
>()
external NativeWin32Result CreateFile2_Wrapper(
  PCWSTR lpFileName,
  int dwDesiredAccess,
  int dwShareMode,
  int dwCreationDisposition,
  Pointer<CREATEFILE2_EXTENDED_PARAMETERS> pCreateExParams,
);

@internal
@Native<NativeWin32Result Function(HANDLE, HANDLE, IntPtr, Uint32)>()
external NativeWin32Result CreateIoCompletionPort_Wrapper(
  int fileHandle,
  int existingCompletionPort,
  int completionKey,
  int numberOfConcurrentThreads,
);

@internal
@Native<NativeWin32Result Function(Pointer<SECURITY_ATTRIBUTES>, PCWSTR)>()
external NativeWin32Result CreateJobObjectW_Wrapper(
  Pointer<SECURITY_ATTRIBUTES> lpJobAttributes,
  PCWSTR lpName,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<HANDLE>,
    Pointer<HANDLE>,
    Pointer<SECURITY_ATTRIBUTES>,
    Uint32,
  )
>()
external NativeWin32Result CreatePipe_Wrapper(
  Pointer<HANDLE> hReadPipe,
  Pointer<HANDLE> hWritePipe,
  Pointer<SECURITY_ATTRIBUTES> lpPipeAttributes,
  int nSize,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PWSTR,
    Pointer<SECURITY_ATTRIBUTES>,
    Pointer<SECURITY_ATTRIBUTES>,
    BOOL,
    Uint32,
    Pointer,
    PCWSTR,
    Pointer<STARTUPINFO>,
    Pointer<PROCESS_INFORMATION>,
  )
>()
external NativeWin32Result CreateProcessW_Wrapper(
  PCWSTR lpApplicationName,
  PWSTR lpCommandLine,
  Pointer<SECURITY_ATTRIBUTES> lpProcessAttributes,
  Pointer<SECURITY_ATTRIBUTES> lpThreadAttributes,
  int bInheritHandles,
  int dwCreationFlags,
  Pointer lpEnvironment,
  PCWSTR lpCurrentDirectory,
  Pointer<STARTUPINFO> lpStartupInfo,
  Pointer<PROCESS_INFORMATION> lpProcessInformation,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<SECURITY_ATTRIBUTES>,
    IntPtr,
    Pointer<NativeFunction<LPTHREAD_START_ROUTINE>>,
    Pointer,
    Uint32,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result CreateRemoteThread_Wrapper(
  int hProcess,
  Pointer<SECURITY_ATTRIBUTES> lpThreadAttributes,
  int dwStackSize,
  Pointer<NativeFunction<LPTHREAD_START_ROUTINE>> lpStartAddress,
  Pointer lpParameter,
  int dwCreationFlags,
  Pointer<Uint32> lpThreadId,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<SECURITY_ATTRIBUTES>,
    IntPtr,
    Pointer<NativeFunction<LPTHREAD_START_ROUTINE>>,
    Pointer,
    Uint32,
    LPPROC_THREAD_ATTRIBUTE_LIST,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result CreateRemoteThreadEx_Wrapper(
  int hProcess,
  Pointer<SECURITY_ATTRIBUTES> lpThreadAttributes,
  int dwStackSize,
  Pointer<NativeFunction<LPTHREAD_START_ROUTINE>> lpStartAddress,
  Pointer lpParameter,
  int dwCreationFlags,
  int lpAttributeList,
  Pointer<Uint32> lpThreadId,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, Uint32)>()
external NativeWin32Result CreateSymbolicLinkW_Wrapper(
  PCWSTR lpSymlinkFileName,
  PCWSTR lpTargetFileName,
  int dwFlags,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<SECURITY_ATTRIBUTES>,
    IntPtr,
    Pointer<NativeFunction<LPTHREAD_START_ROUTINE>>,
    Pointer,
    Uint32,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result CreateThread_Wrapper(
  Pointer<SECURITY_ATTRIBUTES> lpThreadAttributes,
  int dwStackSize,
  Pointer<NativeFunction<LPTHREAD_START_ROUTINE>> lpStartAddress,
  Pointer lpParameter,
  int dwCreationFlags,
  Pointer<Uint32> lpThreadId,
);

@internal
@Native<NativeWin32Result Function(Uint32, IntPtr)>()
external NativeWin32Result DeactivateActCtx_Wrapper(int dwFlags, int ulCookie);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result DebugBreakProcess_Wrapper(int process);

@internal
@Native<NativeWin32Result Function(BOOL)>()
external NativeWin32Result DebugSetProcessKillOnExit_Wrapper(int killOnExit);

@internal
@Native<NativeWin32Result Function(Uint32, PCWSTR, PCWSTR)>()
external NativeWin32Result DefineDosDeviceW_Wrapper(
  int dwFlags,
  PCWSTR lpDeviceName,
  PCWSTR lpTargetPath,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result DeleteFileW_Wrapper(PCWSTR lpFileName);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result DeleteVolumeMountPointW_Wrapper(
  PCWSTR lpszVolumeMountPoint,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Uint32,
    Pointer,
    Uint32,
    Pointer,
    Uint32,
    Pointer<Uint32>,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result DeviceIoControl_Wrapper(
  int hDevice,
  int dwIoControlCode,
  Pointer lpInBuffer,
  int nInBufferSize,
  Pointer lpOutBuffer,
  int nOutBufferSize,
  Pointer<Uint32> lpBytesReturned,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(HMODULE)>()
external NativeWin32Result DisableThreadLibraryCalls_Wrapper(int hLibModule);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result DisconnectNamedPipe_Wrapper(int hNamedPipe);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Pointer<Uint32>)>()
external NativeWin32Result DnsHostnameToComputerNameW_Wrapper(
  PCWSTR hostname,
  PWSTR computerName,
  Pointer<Uint32> nSize,
);

@internal
@Native<NativeWin32Result Function(Uint16, Uint16, Pointer<FILETIME>)>()
external NativeWin32Result DosDateTimeToFileTime_Wrapper(
  int wFatDate,
  int wFatTime,
  Pointer<FILETIME> lpFileTime,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    HANDLE,
    HANDLE,
    Pointer<HANDLE>,
    Uint32,
    BOOL,
    Uint32,
  )
>()
external NativeWin32Result DuplicateHandle_Wrapper(
  int hSourceProcessHandle,
  int hSourceHandle,
  int hTargetProcessHandle,
  Pointer<HANDLE> lpTargetHandle,
  int dwDesiredAccess,
  int bInheritHandle,
  int dwOptions,
);

@internal
@Native<NativeWin32Result Function(HANDLE, BOOL)>()
external NativeWin32Result EndUpdateResourceW_Wrapper(
  int hUpdate,
  int fDiscard,
);
